# awsenv

./: .gitignore  LICENSE.txt  Makefile  awsenv.py  awsenv.sh  credentials.py  readme.md  setup.cfg
awsenv/: __main__.py  awsenv.py
