[metadata]
name = awsenv-cli
version = 0.0.1
author = Mo Kari, Finn Weiler, Luis Falconeri
author_email = mo@mkari.de
description = Simple CLI to source and cache AWS credentials
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohamedKari/awsenv
project_urls =
    Bug Tracker = https://github.com/MohamedKari/awsenv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS

[options]
packages = find: 
python_requires = >=3.6
install_requires =
    boto3

[options.entry_points]
console_scripts =
    awsenv = awsenv.__main__:main